# A1102

./: .gitignore  README.md
components/sensecap-a1102/: CMakeLists.txt  idf_component.yml
components/sscma_client/include/: sscma_client_ops.h
components/sscma_client/src/: sscma_client_ops.c
examples/a1102/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/a1102/main/: CMakeLists.txt  a1102.c  idf_component.yml  main.c  main.h  sscma_client_monitor.c
examples/a1102/main/app/: app_ble.c  app_ble.h  app_himax.c  app_himax.h  app_modbus.c  app_modbus.h  app_mqtt.c  app_mqtt.h  app_nvs.c  app_nvs.h  app_ota.c  app_ota.h  app_wifi.c  app_wifi.h  at_cmd.c  at_cmd.h  bsp.c  bsp.h
examples/helloworld/main/: CMakeLists.txt  idf_component.yml  main.c
examples/sscma_client_monitor/: sdkconfig.defaults
examples/sscma_client_ota/: partitions.csv  sdkconfig.defaults
examples/sscma_mqtt/: CMakeLists.txt
examples/sscma_mqtt/main/: CMakeLists.txt  idf_component.yml  main.c  sdkconfig.defaults
examples/sscma_mqtt/main/app/: app_himax.c  app_himax.h  app_mqtt.c  app_nvs.c  app_nvs.h  app_wifi.c  app_wifi.h  bsp.c  bsp.h
